
@startuml
hide empty methods

title "\nCreated Mongodb Collections\n\n"

package "Collection: Mine" {

    class "Mine" as Mine_Mine {
            UuidType id
            StringType name<color:grey>"" // filter, sort""</color>
            Storage storage
            DateTimeType time<color:grey>"" // filter, sort""</color>
            UuidType[] dwarfs<color:grey>"" // filter""</color>
            BooleanType active<color:grey>"" // filter""</color>
    }
    class "Storage" as Mine_Storage {
            IntegerType mithril<color:grey>"" // filter""</color>
            IntegerType gold<color:grey>"" // filter""</color>
            IntegerType silver<color:grey>"" // filter""</color>
            IntegerType diamond<color:grey>"" // filter""</color>
            IntegerType iron<color:grey>"" // filter""</color>
            IntegerType cupper<color:grey>"" // filter""</color>
    }

    Mine_Mine  *--  Mine_Storage


}
package "Collection: MineSpotRow" {

    class "MineSpotRow" as MineSpotRow_MineSpotRow {
            UuidType mine_id<color:grey>"" // filter, sort""</color>
            IntegerType row_number<color:grey>"" // filter, sort""</color>
            IntegerType level<color:grey>"" // filter, sort""</color>
            MineSpot[] columns
    }
    class "MineSpot" as MineSpotRow_MineSpot {
            MineSpotMaterial material<color:grey>"" // filter""</color>
            IntegerType initialAmountOfMaterial
            IntegerType currentAmountOfMaterial
            NumberType miningDifficulty
    }
    enum "MineSpotMaterial" as MineSpotRow_MineSpotMaterial {
        MITHRIL
        GOLD
        SILVER
        DIAMOND
        IRON
        CUPPER
        ROCK
    }

    MineSpotRow_MineSpotRow "0" *-- "n" MineSpotRow_MineSpot


    MineSpotRow_MineSpot  *--  MineSpotRow_MineSpotMaterial


}
package "Collection: Dwarf" {

    class "Dwarf" as Dwarf_Dwarf {
            UuidType id
            StringType name<color:grey>"" // filter, sort""</color>
            UuidType mine_id<color:grey>"" // filter""</color>
            Storage pocket
            IntegerType strongness
            IntegerType currentStrongness<color:grey>"" // filter, sort""</color>
            IntegerType hunger<color:grey>"" // filter, sort""</color>
            NumberType healthiness<color:grey>"" // filter, sort""</color>
            NumberType motivation<color:grey>"" // filter, sort""</color>
            DwarfWay[] way
    }
    class "Storage" as Dwarf_Storage {
            IntegerType mithril<color:grey>"" // filter""</color>
            IntegerType gold<color:grey>"" // filter""</color>
            IntegerType silver<color:grey>"" // filter""</color>
            IntegerType diamond<color:grey>"" // filter""</color>
            IntegerType iron<color:grey>"" // filter""</color>
            IntegerType cupper<color:grey>"" // filter""</color>
    }
    class "DwarfWay" as Dwarf_DwarfWay {
            IntegerType row_number
            IntegerType spot
            IntegerType level
    }

    Dwarf_Dwarf  *--  Dwarf_Storage

    Dwarf_Dwarf "0" *-- "n" Dwarf_DwarfWay



}

footer \ngenerated with yacg (https://github.com/OkieOth/yacg),\n(template: plantUml_dao.mako v0.1.0)\npowered by plantuml (https://plantuml.com/)
@enduml